--- a/Allfiles/dotnet/Mod06/Labfiles/Starter/Contoso.Events/Contoso.Events.Web/Views/Home/Event.cshtml
+++ b/Allfiles/dotnet/Mod06/Labfiles/Starter/Contoso.Events/Contoso.Events.Web/Views/Home/Event.cshtml
@@ -23,7 +23,20 @@
 </div>
 <div class="row">
     <div class="col-sm-6">
-        @Html.DisplayFor(m => m.Event.Location)
+        <div class="Flexible-container">
+            @{
+                int height = 250;
+                int width = 600;
+                int level = 16;
+            }
+            <iframe width="@width"
+                    height="@height"
+                    frameborder="0"
+                    scrolling="no"
+                    marginheight="0"
+                    marginwidth="0"
+                    src="http://www.bing.com/maps/embed/viewer.aspx?v=3&cp=@Model.Event.Latitude~@Model.Event.Longitude&lvl=@level&w=@width&h=@height&sty=r&typ=s&pp=&ps=55&dir=0&mkt=en-us&src=SHELL&form=BMEMJS"></iframe>
+        </div>
     </div>
     <div class="col-sm-6">
         <div class="alert alert-warning">
